[package]
name = "whirlwind"
description = "Collection of thread-safe, asynchronous data structures."
authors = ["Will Hopkins <will@fortress.build>"]
version = "0.1.0-rc1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/fortress-build/whirlwind"
license = "Apache-2.0"
keywords = ["async", "hashmap", "sharding"]
categories = ["asynchronous", "concurrency", "data-structures"]


[dependencies]
hashbrown = "0.15.0"
num_cpus = "1.16.0"

[dev-dependencies]
tokio = { version = "1.41.0", features = ["full"] }
