[package]
name = "whirlwind"
description = "Collection of thread-safe, asynchronous data structures."
authors = ["Will Hopkins <will@fortress.build>"]
version = "0.1.0-rc1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/fortress-build/whirlwind"
license = "Apache-2.0"
keywords = ["async", "hashmap", "sharding"]
categories = ["asynchronous", "concurrency", "data-structures"]


[dependencies]
crossbeam-utils = "0.8.20"
hashbrown = { version = "0.14.5", default-features = false, features = ["raw"] }

[dev-dependencies]
tokio = { version = "1.41.0", features = ["full"] }
